# whispermlx

./: .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml
.github/workflows/: build-and-release.yml  python-compatibility.yml
tests/: conftest.py  test_alignment.py  test_asr.py  test_audio.py  test_cli.py  test_diarize.py  test_schema.py  test_subtitles.py  test_transcribe_integration.py  test_utils.py  test_vad.py
whispermlx/: alignment.py
